# dj-sentry-l8l

./: .bumpversion.cfg  README.md  pyproject.toml  setup.cfg
sentry_l8l/: __init__.py  app_settings.py  apps.py  sentry.py
