[metadata]
name = dj-sentry-l8l
version = 0.2.3
description = Application avec utilitaires pour gérer l''interfaçage avec Sentry
long_description = file: README.md
url = https://www.example.com/
author = Jules Waldhart
author_email = jules.waldhart@lesoctetslibres.com
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.2
    Intended Audience :: Developers
    License :: OSI Approved :: MIT
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.6
install_requires =
    Django >= 3.2
    sentry-sdk >= 1.5

[flake8]
max-line-length = 120
ignore = E203, W503
exclude = migrations
